crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/fractional/generated/slang/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: The base slot of the storage layout must evaluate to an integer.
   ╭─[input.sol:5:22]
   │
 5 │ contract C layout at 1.5 {}
   │                      ─┬─  
   │                       ╰─── Error occurred here.
───╯
